deploy/deploy-ratings-v1.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: ratings
    app.kubernetes.io/part-of: ratings
    app.openshift.io/runtime: nodejs
    version: v1
  name: ratings-v1
  namespace: red-bookinfo1-app
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: ratings
      version: v1
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      annotations:
        sidecar.istio.io/inject: "true"
      creationTimestamp: null
      labels:
        app: ratings
        version: v1
    spec:
      containers:
      - image: quay.io/maistra/examples-bookinfo-ratings-v1:2.2.0
        imagePullPolicy: IfNotPresent
        name: ratings
        ports:
        - containerPort: 9080
          protocol: TCP
        resources: {}
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      serviceAccount: bookinfo-ratings
      serviceAccountName: bookinfo-ratings
      terminationGracePeriodSeconds: 30
