deploy/deploy-reviews-v1.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  generation: 3
  labels:
    app: reviews
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/part-of: reviews
    app.openshift.io/runtime: java
    version: v1
  name: reviews-v1
  namespace: red-bookinfo1-app
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: reviews
      version: v1
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      annotations:
        sidecar.istio.io/inject: "true"
      creationTimestamp: null
      labels:
        app: reviews
        version: v1
    spec:
      containers:
      - env:
        - name: LOG_DIR
          value: /tmp/logs
        image: quay.io/maistra/examples-bookinfo-reviews-v1:2.2.0
        imagePullPolicy: IfNotPresent
        name: reviews
        ports:
        - containerPort: 9080
          protocol: TCP
        resources: {}
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
        volumeMounts:
        - mountPath: /tmp
          name: tmp
        - mountPath: /opt/ibm/wlp/output
          name: wlp-output
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      serviceAccount: bookinfo-reviews
      serviceAccountName: bookinfo-reviews
      terminationGracePeriodSeconds: 30
      volumes:
      - emptyDir: {}
        name: wlp-output
      - emptyDir: {}
        name: tmp
