deploy/destinationrules-details.yaml
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  annotations:
    meta.helm.sh/release-name: mesh1-ossm-federation-bookinfo
    meta.helm.sh/release-namespace: teste-bookinfo
  creationTimestamp: "2023-08-15T14:25:18Z"
  generation: 1
  labels:
    app.kubernetes.io/managed-by: Helm
  name: details
  namespace: red-bookinfo1-app
  uid: 32ce1120-464d-41e7-8eab-3fa0b46401e3
spec:
  host: details
  subsets:
  - labels:
      version: v1
    name: v1
  trafficPolicy:
    loadBalancer:
      localityLbSetting:
        enabled: true
        failover:
        - from: red-mesh
          to: green-mesh
    outlierDetection:
      baseEjectionTime: 1m
      consecutive5xxErrors: 3
      interval: 10s
