deploy/svc-productpage.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    meta.helm.sh/release-name: mesh1-ossm-federation-bookinfo
    meta.helm.sh/release-namespace: teste-bookinfo
  creationTimestamp: "2023-08-15T14:25:18Z"
  labels:
    app: productpage
    app.kubernetes.io/managed-by: Helm
    service: productpage
  name: productpage
  namespace: red-bookinfo1-app
  resourceVersion: "59427"
  uid: 0582c46e-a8ea-471f-8d72-7df039aa7058
spec:
  clusterIP: 172.30.198.152
  clusterIPs:
  - 172.30.198.152
  internalTrafficPolicy: Cluster
  ipFamilies:
  - IPv4
  ipFamilyPolicy: SingleStack
  ports:
  - name: http
    port: 9080
    protocol: TCP
    targetPort: 9080
  selector:
    app: productpage
  sessionAffinity: None
  type: ClusterIP
status:
  loadBalancer: {}
