deploy/svc-ratings.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    meta.helm.sh/release-name: mesh1-ossm-federation-bookinfo
    meta.helm.sh/release-namespace: teste-bookinfo
  creationTimestamp: "2023-08-15T14:25:18Z"
  labels:
    app: ratings
    app.kubernetes.io/managed-by: Helm
    service: ratings
  name: ratings
  namespace: red-bookinfo1-app
  resourceVersion: "59436"
  uid: ee9b444a-ff30-4af3-aac0-62799ab1904d
spec:
  clusterIP: 172.30.121.158
  clusterIPs:
  - 172.30.121.158
  internalTrafficPolicy: Cluster
  ipFamilies:
  - IPv4
  ipFamilyPolicy: SingleStack
  ports:
  - name: http
    port: 9080
    protocol: TCP
    targetPort: 9080
  selector:
    app: ratings
  sessionAffinity: None
  type: ClusterIP
status:
  loadBalancer: {}
