deploy/virtualservices-bookinfo.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  annotations:
    meta.helm.sh/release-name: mesh1-ossm-federation-bookinfo
    meta.helm.sh/release-namespace: teste-bookinfo
  creationTimestamp: "2023-08-15T14:25:19Z"
  generation: 1
  labels:
    app.kubernetes.io/managed-by: Helm
  name: bookinfo
  namespace: red-bookinfo1-app
  resourceVersion: "59583"
  uid: fbd6b19e-2d8c-45e8-a47c-3e0e9e6ee112
spec:
  gateways:
  - bookinfo-gateway
  hosts:
  - '*'
  http:
  - match:
    - uri:
        exact: /productpage
    - uri:
        prefix: /static
    - uri:
        exact: /login
    - uri:
        exact: /logout
    - uri:
        prefix: /api/v1/products
    route:
    - destination:
        host: productpage
        port:
          number: 9080
